--- a/index.html
+++ b/index.html
@@ -24,7 +24,10 @@
 							if(data[i].colors === "black") {
 								var classToAdd = "large";
 								$("<h2>").addClass("large").html(data[i].colors).appendTo("body");
-							} else if(data[i].colors !== "black"){
+							}  else if(data[i].colors === "red"){
+								var classToAdd= "other";
+								$("<h2>").addClass("other").html(data[i].colors).appendTo("body");
+							}else if(data[i].colors !== "black"){
 								var classToAdd = "small";
 								$("<h2>").addClass("small").html(data[i].colors).appendTo("body");
 							}
@@ -39,11 +42,19 @@
 			.large{
 				font-size:400px;
 				font-family:helvetica, sans-serif;
+				text-decoration:overline;
+
 			}
 			.small{
-				font-size:8px;
+				font-size:12px;
+				font-family:helvetica, sans-serif;
+				color:gray;
+			}
+			.other{
+				font-size:90px;
 				font-family:helvetica, sans-serif;
 				color:red;
+					text-align:center;
 			}
 		</style>
 
